--- a/_posts/2021-01-17-make-blog.md
+++ b/_posts/2021-01-17-make-blog.md
@@ -32,14 +32,14 @@ tags:
 그리고 설명에 앞서, 어느정도 깃허브의 홈페이지를 다룰줄 안다고 가정하고 설명을 하겠다.  
 또한, markdown으로 readme.md정도는 만들 수 있다고 가정한다.  
 
-1. 아주 간단한 Github blog 만들기.(테마 적용x)  
-  1.1. 본인의 Github에서 New repository를 만든다.  
-  1.2. Repository의 이름은 `<user_id>.github.io`로 만든다.  
+아주 간단한 Github blog 만들기.(테마 적용x)  
+  1. 본인의 Github에서 New repository를 만든다.  
+  2. Repository의 이름은 `<user_id>.github.io`로 만든다.  
   이까지 했다면, Github에 `<user_id>.github.io`라는 repository가 생성 되었을 것이다.  
-  1.3. 생성된 repository에 `index.md`라는 파일을 생성한다.  
-  1.4. 이제 `index.md`파일에 markdown으로 쓰고싶은 글을 쓰고 커밋을 해보자.  
-  1.5. 주소창에 `https://<user_id>.github.io/`를 입력하고 이동해보자.  
-  1.6. 본인이 `index.md`에 썼던 내용이 보일 것이다.  
+  3. 생성된 repository에 `index.md`라는 파일을 생성한다.  
+  4. 이제 `index.md`파일에 markdown으로 쓰고싶은 글을 쓰고 커밋을 해보자.  
+  5. 주소창에 `https://<user_id>.github.io/`를 입력하고 이동해보자.  
+  6. 본인이 `index.md`에 썼던 내용이 보일 것이다.  
 
 말이 6번까지 있지, 사실 아주 간단하다.  
 요약하자면,  
