--- a/_posts/2021-01-17-make-blog.md
+++ b/_posts/2021-01-17-make-blog.md
@@ -66,7 +66,6 @@ tags:
 이 글은 아주 간략하게 방향만을 기록해두었기에, 더욱 상세한 내용은 더욱 잘 정리된 사이트를 참고하길 바란다.  
 
 ---  
-
 참고로 나는 이 사이트들을 참고했다.  
 [우분투에서 Jekyll 설치법](https://jekyllrb-ko.github.io/docs/installation/ubuntu/)  
 [Jekyll 한글번역](https://jekyllrb-ko.github.io/docs/)  
@@ -75,7 +74,6 @@ tags:
 가장 잘 정리가 되어있다.  사실 이 곳만 봐도 무방하다.  
 
 ---  
-
 지킬의 다양한 테마를 사용하려면, ruby를 다운받아야 하고, bundle과 jekyll을 다운해야하며, build-essential 등 다운 받을것이 많은데, 설명이 엄청 잘 되어 있어, 굳이 내가 정리하지 않아도 괜찮을 것 같아 추천한다.  
 
 이하 내용은, 위 링크에 나온 내용을 간략히 정리한 것이다.   
@@ -98,7 +96,7 @@ tags:
 ---  
 
 1. Jekyll 을 설치하기 전, 필요한 모든 의존요소를 가지고 있는지 확인해야 함.  
-`sudo apt-get iinstall ruby-full build-essential zlib1g-dev`  
+`sudo apt-get install ruby-full build-essential zlib1g-dev`  
 
 2. gem 설치 경로를 설정하는 환경설정 변수를 ~/.bashrc 파일에 추가.  
 ```  
