--- a/_posts/2021-01-17-make-blog.md
+++ b/_posts/2021-01-17-make-blog.md
@@ -113,10 +113,10 @@ source ~/.bashrc
 `bundle i`로 명령을 해보자.  
 (사실 오래전이라 기억이 안난다. 안된다면, 직접 구글링으로 오류를 해결하기 바란다.)   
 
-4. <user_id>.github.io 레포지토리로 이동해서, `bundle install`명령 실행.  
+4. `<user_id>.github.io` 레포지토리로 이동해서, `bundle install`명령 실행.  
 `bundle install` 했을 때, 에러가 뜨면, `gem update --system` 이렇게 해결 해보자.(나의 경우, 해결이 됐었다.)  
 
-5. _config.yml(설정파일 수정)  
+5. `_config.yml`(설정파일 수정)  
 주로, _config.yml에는,  
 url부분을 `url="https://<user_id>.github.io/"`로 수정.  
 baseurl 부분을 `baseurl=""`로 수정.  
