--- a/_posts/2021-01-24-git.md
+++ b/_posts/2021-01-24-git.md
@@ -96,21 +96,21 @@ Unity로 게임을 만들고 있다고 가정하겠다.
 1. Ubuntu Linux(내가 커스터마이징한Ubuntu에서 git을 쓰기 위해, Ubuntu Linux도 넣었다)  
     * Docker 안에서, Ubuntu Linux를 사용한다면, `$ apt install git`으로 설치가 가능하다.  
     git 설치 후, 아래 명령어 입력.  
-    > $ git config --global user.name "[NAME]"  
-    > $ git config --global user.email "[EMAIL]"  
+    > $ git config --global user.name [NAME]  
+    > $ git config --global user.email [EMAIL]  
 
 2. MacOS  
     1. [MacOS git Install](https://git-scm.com/download/mac)  
     2. 초기설정하기.  
     git 설치 후, **Git Bash**를 실행하고 아래 명령어 입력.  
-    > $ git config --global user.name "[NAME]"  
-    > $ git config --global user.email "[EMAIL]"  
+    > $ git config --global user.name [NAME]  
+    > $ git config --global user.email [EMAIL]  
 
 3. Windows
     * [Windows git Install](https://git-scm.com/download/win)
     git 설치 후, **Git Bash**를 실행하고 아래 명령어 입력.  
-    > $ git config --global user.name "[NAME]"  
-    > $ git config --global user.email "[EMAIL]"  
+    > $ git config --global user.name [NAME]  
+    > $ git config --global user.email [EMAIL]  
 
 > 여기서 언급한 그리고 아래에서 언급할 **NAME, EMAIL**은 본인의 **github ID**와 **github EMAIL**입니다.  
 
