--- a/_posts/2021-01-10-hello.md
+++ b/_posts/2021-01-10-hello.md
@@ -1,35 +1,13 @@
 ---
 layout: post
-title:  "한글말테스트"
+title:  "First Post"
 date:   2021-01-10 23:35:30 +0800
 categories: [Life]
-excerpt: 할말이 없다 테스트를 위함. For test. I am a boy. Just a boy.
-tags:
-  - Hi
-  - EN
+excerpt: This is my first post.
 ---
 
-# 할말이 없습니다.  
-위대한 한글.  
-[Korean](https://www.google.com/search?source=hp&ei=msT9X6XvNIytoATjooPwDQ&q=Korean&oq=Korean&gs_lcp=CgZwc3ktYWIQAzIICAAQsQMQgwEyBAgAEAMyBQgAELEDMgIIADIICAAQsQMQgwEyAggAMgUIABCxAzICCAAyAggAMgIIAFCIBViBCWD-CWgAcAB4AIABd4gBmAWSAQMwLjaYAQCgAQGqAQdnd3Mtd2l6&sclient=psy-ab&ved=0ahUKEwilpNCJ35buAhWMFogKHWPRAN4Q4dUDCAc&uact=5)  
+## My first Post!  
 
-## Markdown 잘 되나요??  
-1. Hello To myself.  
-2. zz
-3. gg
-4. ll
-- Hi
-- How
-- are
-- you?  
-
-```  
-Hello.
-```  
-> Hi~~~~~~~  
-
-I am a ```Boy```. Just a boy.  
-
----
+Jekyll을 이용하여 만든 Github blog이다.  
 
 **Bye!**  
