--- a/_posts/2021-01-24-git.md
+++ b/_posts/2021-01-24-git.md
@@ -83,6 +83,12 @@ Unity로 게임을 만들고 있다고 가정하겠다.
 **Github**는 **git**레포지토리를 다른 사람과 공유할 수 있는 플랫폼이다.  
 이 곳을 통해, 우리는 협업이 가능하고, 나의 프로젝트를 담아볼 수 있다.  
 또, 전세계 사람들이 올린 public한 레포지토리를 구경할 수 있다!  
+만약 다른 사람의 레포지토리 내용을 수정하거나, 추가적인 기능을 넣고 싶을 때, Github에서 fork기능을 이용하여 내 레포지토리로 카피할 수 있다.  
+fork한 저장소는 원작자와 연결되어 있다.  
+내용을 수정하거나 추가하고, pull request로 원작자에게 바뀐 내용을 merge를 할건지 묻는다.  
+만약 원작자가 pull request를 받아들이면, 원작자의 원본 레포지토리가 바뀌게 된다.  
+pull request 없이는, 나의 깃허브에 forked된 레포지토리에서만 작업을 할 수 있다.  
+
 아직 Github계정이 없다면 당장 [Github 사이트](https://github.com/) 에서 회원가입 하길 바란다.  
 
 > ++추가로 요즘은 Github에 있는 레포지토리들을 포트폴리오로 취급한다고 한다.  
