--- a/_posts/2021-01-24-git.md
+++ b/_posts/2021-01-24-git.md
@@ -14,6 +14,7 @@ tags:
 > 본 내용은 gbc 1주차에 ProgrammerBase를 통해 배운 내용이다.  
 > 강의해주신 ghost 한찬솔님께 감사드리며, 더욱 자세한 내용은 [이 곳](https://ccss17.github.io/ProgrammerBase/git/#git)에 기록되어있다.  
 > 본 내용은 위 사이트를 참고했고, 내가 이해한 것과 더욱 간결하게 글을 줄일 수 있다면 줄이며 나만의 글로 정리했다.  
+> 위 자료를 보고 공부를 했기 때문에, 대부분의 베이스 글은 위 사이트를 참조했다는 사실을 다시 한번 알린다.  
 
 ---  
 
@@ -83,17 +84,22 @@ Unity로 게임을 만들고 있다고 가정하겠다.
 **Github**는 **git**레포지토리를 다른 사람과 공유할 수 있는 플랫폼이다.  
 이 곳을 통해, 우리는 협업이 가능하고, 나의 프로젝트를 담아볼 수 있다.  
 또, 전세계 사람들이 올린 public한 레포지토리를 구경할 수 있다!  
-만약 다른 사람의 레포지토리 내용을 수정하거나, 추가적인 기능을 넣고 싶을 때, Github에서 fork기능을 이용하여 내 레포지토리로 카피할 수 있다.  
-fork한 저장소는 원작자와 연결되어 있다.  
-만약 내가 수정하거나 추가한 내용이 더 좋다고 판단되거나, 오류를 찾아서 그것을 고쳤을 경우, 원작자에게 pull request를 할 수 있다.  
-pull request는 원작자에게 바뀐 내용을 받아들일지 물어보는 것이다.  
-만약 원작자가 pull request를 받아들이면, 원작자의 원본 레포지토리가 바뀌게 된다.  
-pull request 없이는, 나의 깃허브에 forked된 레포지토리에서만 변경 사항이 적용된다.  
 
 이렇게 유용한 Github의 계정이 아직 없다면 당장 [Github 사이트](https://github.com/) 에서 회원가입 하길 바란다.  
 
 > ++추가로 요즘은 Github에 있는 레포지토리들을 포트폴리오로 취급한다고 한다.  
 > Github에 자신의 프로젝트를 잘 정리해서 많이 올려둬서 나쁠건 없어보인다.  
+
+---  
+
+## fork, pull request
+만약 다른 사람의 레포지토리 내용을 수정하거나, 추가적인 기능을 넣고 싶을 때, Github에서 fork기능을 이용하여 내 레포지토리로 카피할 수 있다.  
+fork한 저장소는 원작자와 연결되어 있다.  
+만약 내가 수정하거나 추가한 내용이 더 좋다고 판단되거나, 오류를 찾아서 그것을 고쳤을 경우, 원작자에게 pull request를 할 수 있다.  
+pull request는 원작자에게 바뀐 내용을 받아들일지 물어보는 것이다.  
+일단 fork한 내 레포지토리의 파일을 변경하고, pull request로 원작자에게 요청을 할 수 있고,  
+만약 원작자가 pull request를 받아들이면, 원작자의 원본 레포지토리가 바뀌게 된다.  
+즉, pull request 없이는, 나의 깃허브에 forked된 레포지토리에서만 변경 사항이 적용된다.  
 
 ---  
 
