--- a/_posts/2021-01-24-git.md
+++ b/_posts/2021-01-24-git.md
@@ -110,7 +110,7 @@ fork한 저장소는 원작자와 연결되어 있다.
 2. 오타나 오류, 내용의 수정등을 행하고 push를 한다.(내 레파지토리에만 변경됨.)  
 3. **pull**이 원작자에게도 '내가 당신껄 고쳤습니다. 반영해주세요~' 요청하는 것이라고 하였다.  
 4. 위의 그림과 같이 pull requests에 들어가서 New pull request로 요청을 하자.  
-5. 그 후, Create pull requests라는 버튼이 나오면 그냥 클릭하면 끝~  
+5. 그 후, Create pull requests라는 버튼이 나오면 그냥 클릭하면 끝.  
 
 **pull request 설명**  
 만약 내가 수정하거나 추가한 내용이 더 좋다고 판단되거나, 오류를 찾아서 그것을 고쳤을 경우, 원작자에게 pull request를 할 수 있다.  
