--- a/_posts/2021-01-29-gbc_study.md
+++ b/_posts/2021-01-29-gbc_study.md
@@ -2,13 +2,15 @@
 layout: post
 title:  "GBC 스터디 끝"
 date:   2021-01-29 14:40:30 +0800
-categories: [Life]
-excerpt: GBC End!
+categories: [Tech]
+excerpt: GBC Study End!
 tags:
   - GBC
+  - Project
 ---
 
 ![GHOST](/assets/images/ghost_img/ghost.PNG)  
+
 ## gbc의 끝(프로젝트 빼고)  
 
 2020.12.21(월) ~ 2021.01.31(일)까지 gbc 6주간 스터디가 끝이 났다.  
