--- a/_posts/2021-01-24-docker.md
+++ b/_posts/2021-01-24-docker.md
@@ -98,6 +98,11 @@ a옵션은 종료된 컨테이너까지 보여줌.
 (kdjun97/ubuntu 이미지 삭제)  
 하지만, 이미지를 삭제하면, 다시 다운받아야한다.  
 
+5. Local에 있는 파일 컨테이너로 copy  
+- ```$ docker cp [Local 경로] [컨테이너 이름]:[컨테이너 내부 경로]```  
+- Local에 있는 파일을 컨테이너로 copy할 수 있다.  
+- 참고로 리눅스에서 `$ pwd`를 통해 현재 디렉토리의 경로를 볼 수 있다.  
+
 일단, 이정도만 알아도 docker를 요긴하게 사용할 수 있다.  
 
 출처: [Ghost 한찬솔님의 블로그](https://ccss17.github.io/ProgrammerBase/docker/#_1)  
