--- a/_posts/2021-02-28-개강.md
+++ b/_posts/2021-02-28-개강.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "It is what it is(was)."
+title:  "개강 하루전"
 date:   2021-02-28 19:55:00
 categories: [Life]
 excerpt: 2021-1학기 시작 하루전
