edit docker post

--- a/_posts/2021-01-24-docker.md
+++ b/_posts/2021-01-24-docker.md
@@ -103,6 +103,11 @@ a옵션은 종료된 컨테이너까지 보여줌.
 - Local에 있는 파일을 컨테이너로 copy할 수 있다.  
 - 참고로 리눅스에서 `$ pwd`를 통해 현재 디렉토리의 경로를 볼 수 있다.  
 
+6. 이미지 찾아보기  
+- ```$ docker search [image 이름]```  
+- docker hub에서 사용 가능한 이미지 목록을 보여준다.  
+- star순으로 표시.  
+  
 일단, 이정도만 알아도 docker를 요긴하게 사용할 수 있다.  
 
 출처: [Ghost 한찬솔님의 블로그](https://ccss17.github.io/ProgrammerBase/docker/#_1)  
