edit docker post

--- a/_posts/2021-01-24-docker.md
+++ b/_posts/2021-01-24-docker.md
@@ -107,7 +107,20 @@ a옵션은 종료된 컨테이너까지 보여줌.
 - ```$ docker search [image 이름]```  
 - docker hub에서 사용 가능한 이미지 목록을 보여준다.  
 - star순으로 표시.  
-  
+
+7. Windows에서 anaconda3(+jupyter notebook) 사용하기  
+- 수업 때, 파이썬 환경과 아나콘다를 설치해야 했는데, local에 설치하기 싫어서 도커에 설치해보았다.  
+- image는 ```$ docker search anaconda3```로 가장 star가 많은 continuumio/anaconda3 image를 사용하였다.  
+- 컨테이너 만들기  
+  - ```$ docker run --it -name anaconda3 -p 8888:8888 -v continuumio/anaconda3```  
+  - `-p 옵션`은 포트 포워딩이라 생각하면됨.  
+  - 호스트의 8888포트가 도커 컨테이너의 8888포트로 연결됨.  
+  - `-v 옵션`은 volume 옵션이라고 한다.  
+- Jupyter Notebook 시작  
+  - ```$ jupyter notebook --ip=0.0.0.0 --port=8888 --allow-root```  
+  - bash창에 copy and paste one of these URLs 중 카피해서 주소창으로 접속하면 됨.  
+
+
 일단, 이정도만 알아도 docker를 요긴하게 사용할 수 있다.  
 
 출처: [Ghost 한찬솔님의 블로그](https://ccss17.github.io/ProgrammerBase/docker/#_1)  
