docker post edit

--- a/_posts/2021-01-24-docker.md
+++ b/_posts/2021-01-24-docker.md
@@ -98,29 +98,6 @@ a옵션은 종료된 컨테이너까지 보여줌.
 (kdjun97/ubuntu 이미지 삭제)  
 하지만, 이미지를 삭제하면, 다시 다운받아야한다.  
 
-5. Local에 있는 파일을 컨테이너로 copy  
-- ```$ docker cp [Local 경로] [컨테이너 이름]:[컨테이너 내부 경로]```  
-- Local에 있는 파일을 컨테이너로 copy할 수 있다.  
-- 참고로 리눅스에서 `$ pwd`를 통해 현재 디렉토리의 경로를 볼 수 있다.  
-
-6. 이미지 찾아보기  
-- ```$ docker search [image 이름]```  
-- docker hub에서 사용 가능한 이미지 목록을 보여준다.  
-- star순으로 표시.  
-
-7. Windows에서 anaconda3(+jupyter notebook) 사용하기  
-- 수업 때, 파이썬 환경과 아나콘다를 설치해야 했는데, local에 설치하기 싫어서 도커에 설치해보았다.  
-- image는 ```$ docker search anaconda3```로 가장 star가 많은 continuumio/anaconda3 image를 사용하였다.  
-- 컨테이너 만들기  
-  - ```$ docker run --it -name anaconda3 -p 8888:8888 -v continuumio/anaconda3```  
-  - `-p 옵션`은 포트 포워딩이라 생각하면됨.  
-  - 호스트의 8888포트가 도커 컨테이너의 8888포트로 연결됨.  
-  - `-v 옵션`은 volume 옵션이라고 한다.  
-- Jupyter Notebook 시작  
-  - ```$ jupyter notebook --ip=0.0.0.0 --port=8888 --allow-root```  
-  - bash창에 copy and paste one of these URLs 중 카피해서 주소창으로 접속하면 됨.  
-
-
 일단, 이정도만 알아도 docker를 요긴하게 사용할 수 있다.  
 
 출처: [Ghost 한찬솔님의 블로그](https://ccss17.github.io/ProgrammerBase/docker/#_1)  
@@ -161,4 +138,44 @@ rename 한 예제,
 관심이 있다면, 직접 찾아보는 것을 추천한다.  
 [도커 허브 사이트](https://hub.docker.com/)  
 
----
+---  
+
+#### docker 명령어 정리  
+
+1. Local에 있는 파일을 컨테이너로 copy  
+- ```$ docker cp [Local 경로] [컨테이너 이름]:[컨테이너 내부 경로]```  
+- Local에 있는 파일을 컨테이너로 copy할 수 있다.  
+- 참고로 리눅스에서 `$ pwd`를 통해 현재 디렉토리의 경로를 볼 수 있다.  
+
+2. 이미지 찾아보기  
+- ```$ docker search [image 이름]```  
+- docker hub에서 사용 가능한 이미지 목록을 보여준다.  
+- star순으로 표시.  
+
+3. Volume  
+- 볼륨은 도커 컨테이너와 Local 컴퓨터의 데이터를 연결시켜주는 옵션이라고 생각하면 된다.  
+- 위의 **cp** 명령어로 컨테이너 파일과 Local에서 복사가 가능하지만, 아예 폴더 자체를 공유(데이터를 공유)해버리는 옵션이 Volume이다.  
+- ```$ docker volume ls``` 명령어로 볼륨 목록을 볼 수 있음.  
+- ```$ docker volume prune``` 한꺼번에 모든 볼륨을 제거.  
+- ```$ docker -v [Local경로]:[container경로]```로 볼륨을 지정해줄 수 있다.  
+- ex) ```$ docker run -it --name python_jupyter -v D:/pythonTest:/home/pythonTest continuumio/anaconda3```  
+  - 내 Local D드라이브의 pythonTest라는 폴더를 컨테이너/home/pythonTest 폴더와 연결한다.(데이터 공유)  
+  - 나머지 옵션들의 설명은 생략.  
+
+---   
+
+#### docker로 anaconda3 환경 + python jupyter notebook 사용
+
+Windows에서 anaconda3(+jupyter notebook) 사용하기  
+
+- 수업 때, 파이썬 환경과 아나콘다를 설치해야 했는데, local에 설치하기 싫어서 도커에 설치해보았다.  
+- image는 ```$ docker search anaconda3```로 가장 star가 많은 continuumio/anaconda3 image를 사용하였다.  
+- 컨테이너 만들기  
+  - ```$ docker run --it -name anaconda3 -p 8888:8888 -v D:/pythonTest:/home/pythonTest continuumio/anaconda3```  
+  - `-p 옵션`은 포트 포워딩이라 생각하면됨.  
+  - 호스트의 8888포트가 도커 컨테이너의 8888포트로 연결됨.  
+  - `-v 옵션`은 volume 옵션이라고 한다.  
+  - 내 로컬의 폴더와 컨테이너의 폴더를 연결해줌.(데이터 공유)  
+- Jupyter Notebook 시작  
+  - ```$ jupyter notebook --ip=0.0.0.0 --port=8888 --allow-root```  
+  - bash창에 copy and paste one of these URLs 중 카피해서 주소창으로 접속하면 됨.  
