docker post edit

--- a/_posts/2021-01-24-docker.md
+++ b/_posts/2021-01-24-docker.md
@@ -171,7 +171,7 @@ Windows에서 anaconda3(+jupyter notebook) 사용하기
 - 수업 때, 파이썬 환경과 아나콘다를 설치해야 했는데, local에 설치하기 싫어서 도커에 설치해보았다.  
 - image는 ```$ docker search anaconda3```로 가장 star가 많은 continuumio/anaconda3 image를 사용하였다.  
 - 컨테이너 만들기  
-  - ```$ docker run --it -name anaconda3 -p 8888:8888 -v D:/pythonTest:/home/pythonTest continuumio/anaconda3```  
+  - ```$ docker run -it --name anaconda3 -p 8888:8888 -v D:/pythonTest:/home/pythonTest continuumio/anaconda3```  
   - `-p 옵션`은 포트 포워딩이라 생각하면됨.  
   - 호스트의 8888포트가 도커 컨테이너의 8888포트로 연결됨.  
   - `-v 옵션`은 volume 옵션이라고 한다.  
