--- a/_posts/2021-01-24-docker.md
+++ b/_posts/2021-01-24-docker.md
@@ -177,3 +177,7 @@ Windows에서 anaconda3(+jupyter notebook) 사용하기
 - Jupyter Notebook 시작  
   - ```$ jupyter notebook --ip=0.0.0.0 --port=8888 --allow-root```  
   - bash창에 copy and paste one of these URLs 중 카피해서 주소창으로 접속하면 됨.  
+- Jupyter Notebook에서 tensorflow 등 사용하기  
+  - 패키지 다운받으면 됨.  
+  - ```$ pip install tensorflow keras```  
+  - 이 수업에서는 tensorflow와 keras를 필요로 하여 다운받았음.  
