--- a/_posts/2021-03-14-피아노_역사.md
+++ b/_posts/2021-03-14-피아노_역사.md
@@ -22,7 +22,7 @@ excerpt: 두 번째 피아노를 떠나보내며 쓴 글..
 
 #### 두 번째 피아노(영창)
 
-고등학교 때는 커즈와일 cup-2라는 모델을 꿈꾸며 살았었다가(물론 지금도 cup-2랑 cup-2a랑 야마하 s90es를 꿈꾸고 있긴 함), 어쿠스틱 피아노(일반 목건반)를 사게 되었다.  
+고등학교 때는 커즈와일 cup-2라는 모델을 꿈꾸며 살았었다가(물론 지금도 몇 대 눈팅중임), 어쿠스틱 피아노(일반 목건반)를 사게 되었다.  
 수능 끝나고 피아노학원을 1달가량 다녔었는데 그 때 학원 선생님께서 가게를 소개시켜줘서 샀었다.  
 
 구매시기 : 2015년 수능 끝나고? 추정  
