--- a/_posts/2021-03-14-피아노_역사.md
+++ b/_posts/2021-03-14-피아노_역사.md
@@ -40,10 +40,11 @@ excerpt: 두 번째 피아노를 떠나보내며 쓴 글..
 
 ---  
 
-#### 이 방에서 말할 수 없는 비밀 찍을 수 있었는데 ㅋ..
+#### 이 방에서 말할 수 없는 비밀 찍었었는데 ㅋ..
 
 형 방(지금은 내 방)에 이렇게 전자피아노 1대 + 어쿠스틱 1대 총 2대가 들어갔었다.  
 현재는 정든 두 피아노를 보낸 상태다 ㅠㅗㅠ  
+이 사진을 남기는 이유는 추억으로 간직하려고임.  
 
 ![P](/assets/images/Piano/P.jpg)  
 
