--- a/_posts/2021-03-14-피아노_역사.md
+++ b/_posts/2021-03-14-피아노_역사.md
@@ -117,7 +117,8 @@ excerpt: 두 번째 피아노를 떠나보내며 쓴 글..
 가격 : 당시 10만원 정도  
 
 ![P45](/assets/images/Piano/P45.jpg)  
-파란 피아노임. 피아노 의자 뚜껑 열어서 은닉 가능  
+파란 피아노임. 피아노 의자 뚜껑 열어서 은닉 가능.  
+은폐, 엄폐가 장점임. 몰래 사도 들키지 않음.(현재도 안들킨 상태ㅋ)  
 
 딱 봐도 크기부터 휴대하기 간편해 보인다.  
 웬만한 작업은 저걸로 함.(솔직히 61건반 꺼내기 귀찮다)  
