--- a/_posts/2021-03-14-피아노_역사.md
+++ b/_posts/2021-03-14-피아노_역사.md
@@ -133,6 +133,6 @@ excerpt: 두 번째 피아노를 떠나보내며 쓴 글..
 솔직히 맘같아선 다 팔고 좋은 신디 하나 사고싶다..   
 
 현재 구매하고 싶은 리스트다. 언젠간 살려고 적어놓음.  
-Kurzweil cup-2 / cup-2a / Yamaha s90ES / s90XS  
+Kurzweil cup-2 / cup-2a / YAMAHA s90ES / s90XS  
 
 진짜 나중에 심심하면 각 피아노 특징이나 분석? 리뷰?를 해보는 것도 나쁘지 않을듯!  
