--- a/_posts/2021-01-24-docker.md
+++ b/_posts/2021-01-24-docker.md
@@ -144,7 +144,7 @@ rename 한 예제,
 - ```$ docker cp [Local 경로] [컨테이너 이름]:[컨테이너 내부 경로]```  
 - `$ pwd`로 컨테이너의 현재 디렉토리 경로를 본다.  
 - **Windows cmd**에서 명령어를 입력해야 한다. copy할 대상은 C:\pl이라는 폴더라고 가정하자.      
-- `$ docker cp "C:\pl" mine:[1에서봤던 path]` (cmd에서 해야함.)  
+- `$ docker cp "C:\pl" mine:[위에서봤던 path]` (cmd에서 해야함.)  
 - Local에 있는 파일을 컨테이너로 copy할 수 있다.  
 - 참고로 리눅스에서 `$ pwd`를 통해 현재 디렉토리의 경로를 볼 수 있다.  
 - 이렇게 copy한 경우, 읽기전용? 권한으로 copy되는 것 같다.  
