--- a/_posts/2021-03-14-피아노_역사.md
+++ b/_posts/2021-03-14-피아노_역사.md
@@ -8,7 +8,9 @@ excerpt: 두 번째 피아노를 떠나보내며 쓴 글..
 
 ```
 
-우선, 시작하기에 앞서 나에게 음악이라는 소중한 취미를 선물해준, 그리고 나에게 진심으로 피아노에 대한 흥미를 깨워준 나의 스승인 **시유준**에게 감사함을 표시하며 포스팅을 시작하겠다.  
+우선, 시작하기에 앞서 나에게 음악이라는 소중한 취미를 선물해준  
+그리고 나에게 진심으로 피아노에 대한 흥미를 깨워준  
+나의 스승인 시유준에게 감사함을 표시하며 포스팅을 시작하겠다.  
 
 ```
 
