[EDIT] vim post

--- a/_posts/2021-01-25-vim.md
+++ b/_posts/2021-01-25-vim.md
@@ -64,6 +64,9 @@ ctrl + r           | 실행 취소 Redo
 num + gg           | num번째 line으로 이동.
 dd                 | 한 줄 지우기
 num + dd           | 여러 줄 지우기
+yy                 | 한 줄 copy
+num + yy           | 여러 줄 copy
+p                  | 복사 paste
 ctrl + f           | 화면 아래로 넘기기
 ctrl + b           | 화면 위로 넘기기
 / + 검색어 + enter | 검색어 찾기
