--- a/_posts/2021-11-08-활동.md
+++ b/_posts/2021-11-08-활동.md
@@ -118,3 +118,8 @@ tags:
 업무 : 어플리케이션 개발  
 기업 : 201팜빌더  
 
+---  
+
+#### Web Project(Spring)
+기간 : [2021.12.07 ~ 2021.12.18]  
+업무 : Spring Framework를 이용한 Web Service 개발  
