--- a/_posts/2021-11-08-활동.md
+++ b/_posts/2021-11-08-활동.md
@@ -45,7 +45,7 @@ tags:
 #### Changers' AI Coding Camp
 기간 : [2020.08.05 ~ 2020.08.07]  
 업무 : 코딩 교육, 실습 조교  
-
+[Teachable Machine](https://teachablemachine.withgoogle.com/)
 [사진](https://blog.naver.com/namucoding_pohang/222059624975)  
 
 ---
@@ -61,6 +61,7 @@ tags:
 #### 노베이스 인공지능 실습 조교
 기간 : [2020.10.24 (1일)]  
 업무 : 실습 조교  
+[Teachable Machine](https://teachablemachine.withgoogle.com/)
 
 ---
 
