--- a/_posts/2021-11-08-활동.md
+++ b/_posts/2021-11-08-활동.md
@@ -123,6 +123,6 @@ tags:
 
 ---  
 
-#### Web Project(Spring)
+#### Web Project(Spring MVC)
 기간 : [2021.12.07 ~ 2021.12.18]  
 업무 : Spring Framework를 이용한 Web Service 개발  
