--- a/_posts/2021-07-04-TCI-ME.md
+++ b/_posts/2021-07-04-TCI-ME.md
@@ -22,3 +22,54 @@ tags:
 이러한 스포츠들 역시, 운동법을 혼자 배우기엔 무리가 있다.  
 특별한 장비가 필요하거나 전문성이 요구되는 스포츠들은 더더욱 그렇다.  
 
+
+#### 스포츠 매칭 앱
+
+따라서, 스포츠 코치와 회원들의 매칭에 도움을 주는 전문적인 앱이 필요하다고 생각했고, 프로젝트를 진행하였다.  
+
+#### Program Info
+
+Version : 1.0.0  
+Framework : Flutter  
+
+Environment :  
+- sdk: ">=2.10.0 < 3.0.0"  
+
+dependencies:  
+- firebase_auth: ^1.1.3  
+- stack: ^0.2.1  
+- firebase_storage: ^8.0.6  
+- cloud_firestore: ^2.1.0  
+- provider: ^5.0.0  
+- intl: ^0.17.0  
+- image_picker: ^0.7.4  
+- google_maps_flutter: ^2.0.6  
+- cupertino_icons: ^1.0.2  
+- http: ^0.13.1  
+- json_serializable: ^4.1.0  
+- geolocator: ^7.0.3  
+- location: ^4.1.1  
+- geocoder: ^0.2.1  
+- geocoding: ^2.0.0  
+- tflite: ^1.1.2  
+
+Function :  
+- Sign In  
+- Sign Up
+- Search
+- Recommend Tutor
+- Chat Room
+- My Info
+- Tutor Info
+- Search Users(Using Google Map)
+- Posenet
+
+
+`로드맵 설계(프로젝트 향후 계획)`  
+- 1.0.0 Version  
+  - posenet 지원  
+  - 주변 사람 찾기 및 거리 제공  
+
+
+`Figma Prototype`  
+![Figma](/assets/images/TCI-ME/prototype.JPG)  
