--- a/_posts/2021-11-08-활동.md
+++ b/_posts/2021-11-08-활동.md
@@ -97,6 +97,18 @@ tags:
 
 ---
 
+#### Marketplace 앱 개발  
+기간 : [2021.05.03 ~ 2021.05.16]  
+업무 : 모앱개 수업 프로젝트(Flutter 이용)  
+
+---  
+
+#### Python flask를 이용한 Search Engine 개발  
+기간 : [2021.05.10 ~ 2021.06.18]  
+업무 : Front-end (DB 수업 프로젝트)  
+
+---   
+
 #### TCI-ME Project
 기간 : [2021.05.29 ~ 2021.06.13]  
 업무 : 어플리케이션 개발(협업)  
