--- a/_posts/2021-11-08-활동.md
+++ b/_posts/2021-11-08-활동.md
@@ -138,3 +138,10 @@ tags:
 #### Web Project(Spring MVC)
 기간 : [2021.12.07 ~ 2021.12.18]  
 업무 : Spring Framework를 이용한 Web Service 개발  
+
+---  
+
+#### Internship 2  
+기간 : [2022.03.02 ~ 2022.06.30]  
+업무 : IoT 커넥티드 운동관리 앱 개발 및 기획  
+기업 : 피엔케이솔루션  
