Docs: Add experience
사회봉사 목록 추가

--- a/_posts/2021-11-08-활동.md
+++ b/_posts/2021-11-08-활동.md
@@ -18,6 +18,12 @@ tags:
 
 ---  
 
+#### 사회봉사1
+기간 : [2019.06.18 ~ 2019.07.11]  
+업무 : 중학생 수학 학습 지도  
+
+---  
+
 #### Programming Solving Camp
 기간 : [2019.12.23 ~ 2020.01.21]  
 업무 : c++ 코딩  
@@ -138,6 +144,12 @@ tags:
 #### Web Project(Spring MVC)
 기간 : [2021.12.07 ~ 2021.12.18]  
 업무 : Spring Framework를 이용한 Web Service 개발  
+
+---  
+
+#### 사회봉사2
+기간 : [2021.12.20 ~ 2022.01.05]  
+업무 : 아동, 청소년 교과목 학습지도  
 
 ---  
 
